--- a/EFC2.0/Pages/Organization/Org_Employees/Employee_Details.cshtml
+++ b/EFC2.0/Pages/Organization/Org_Employees/Employee_Details.cshtml
@@ -1265,10 +1265,10 @@
             </div>
             <div class="col-md-12 my-3">
                 <div>
-                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="1" name="checkboxName"> Consider Increment</label>
+                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="1" class="form-check-input" name="checkboxName"> <span class="fw-600" style="font-size:12px;line-height:20px;">Consider Increment</span></label>
                 </div>
                 <div>
-                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="2" name="checkboxName"> Copy salary from latest revision</label>
+                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="2" class="form-check-input" name="checkboxName"> <span class="fw-600" style="font-size:12px;line-height:20px;">Copy salary from latest revision</span></label>
                 </div>
             </div>
             <div class="modal-footer">
@@ -1384,10 +1384,10 @@
             </div>
             <div class="col-md-12 my-3">
                 <div>
-                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="1" name="checkboxName"> Email</label>
+                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="1" class="form-check-input" name="checkboxName">  <span class="fw-600" style="font-size:12px;line-height:20px;">Email</span></label>
                 </div>
                 <div>
-                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="2" name="checkboxName"> Allow View</label>
+                    <label class="rd-form-select-label mb-2"><input type="checkbox" id="2" class="form-check-input" name="checkboxName"> <span class="fw-600" style="font-size:12px;line-height:20px;"> Allow View</span></label>
                 </div>
             </div>
             <div class="modal-footer">
