--- a/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
+++ b/EFC2.0/Pages/Shared/Organization_Tabs.cshtml
@@ -4,13 +4,13 @@
 <ul class="topnav">
     <li class="nav-active-top"><a href="/organization/org_dashboard/org_summary" data-target="summary">Dashboard</a></li>
     <li><a href="/organization/org_employees/employee_view" data-target="employees">Employees</a></li>
-    <li><a href="javascript:void(0)" data-target="org-structure" data-link="/org-structure">Organization Structure</a></li>
-    <li><a href="javascript:void(0)" data-target="onboarding" data-link="/onboarding">Onboarding</a></li>
-    <li><a href="javascript:void(0)" data-target="exit" data-link="/exit">Exit</a></li>
-    <li><a href="javascript:void(0)" data-target="help-desk" data-link="/help-desk">Help Desk</a></li>
-    <li><a href="javascript:void(0)" data-target="documents" data-link="/documents">Documents</a></li>
-    <li><a href="javascript:void(0)" data-target="announcements" data-link="/announcements">Announcements</a></li>
-    <li><a href="javascript:void(0)" data-target="assets" data-link="/assets">Assets</a></li>
-    <li><a href="javascript:void(0)" data-target="survey" data-link="/survey">Employee Pulse Survey</a></li>
-    <li><a href="javascript:void(0)" data-target="settings" data-link="/settings">Settings</a></li>
+    <li><a href="/organization/org_structure/legal_entities" data-target="org-structure">Organization Structure</a></li>
+    <li><a href="/organization/onboarding/candidate_view" data-target="onboarding">Onboarding</a></li>
+    <li><a data-target="exit" data-link="/exit">Exit</a></li>
+    <li><a data-target="help-desk" data-link="/help-desk">Help Desk</a></li>
+    <li><a data-target="documents" data-link="/documents">Documents</a></li>
+    <li><a data-target="announcements" data-link="/announcements">Announcements</a></li>
+    <li><a data-target="assets" data-link="/assets">Assets</a></li>
+    <li><a data-target="survey" data-link="/survey">Employee Pulse Survey</a></li>
+    <li><a data-target="settings" data-link="/settings">Settings</a></li>
 </ul>
